# jsoo-is-sorted

./: README.md  esy.json  package.json
lib/: dune  isSorted.rei
