(library
  (name isSorted)
  (public_name jsoo-is-sorted)
  (js_of_ocaml (javascript_files "./isSortedJs.js"))
  (libraries gen_js_api)
)

(rule
  (targets isSorted.ml)
  (deps isSorted.rei)
  (action 
    (progn
      (with-stdout-to isSorted.ml.tmp (run %{bin:refmt} --parse=re -i true --print=ml %{deps}))
      (run %{bin:gen_js_api} -o %{targets} isSorted.ml.tmp)
    )))
